force-app/main/default/objects/Residential_Commission_Hierarchy__c/Residential_Commission_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>Residential Commission Hierarchy</label>
    <nameField>
        <label>Residential Commission Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Residential Commission hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>