force-app/main/default/objects/Residential_Commission_Hierarchy__c/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Residential Commission hierarchies (Closer)</relationshipLabel>
    <relationshipName>Residential_Commission_hierarchiesF3PS</relationshipName>
    <type>Lookup</type>
</CustomField>