force-app/main/default/objects/Residential_Commission_Hierarchy__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <label>Effective From</label>
    <type>DateTime</type>
</CustomField>