force-app/main/default/objects/Residential_Commission_Hierarchy__c/fields/Level10__c.field-meta.xml
<CustomField>
    <fullName>Level10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 10</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Residential Commission hierarchies (Level 10)</relationshipLabel>
    <relationshipName>Residential_Commission_hierarchies9</relationshipName>
    <type>Lookup</type>
</CustomField>