force-app/main/default/objects/Residential_Commission_Hierarchy__c/fields/Level11__c.field-meta.xml
<CustomField>
    <fullName>Level11__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 11</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Residential Commission hierarchies (Level 11)</relationshipLabel>
    <relationshipName>Residential_Commission_hierarchiesEjSE</relationshipName>
    <type>Lookup</type>
</CustomField>