force-app/main/default/objects/Residential_Commission_Hierarchy__c/fields/Level12__c.field-meta.xml
<CustomField>
    <fullName>Level12__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 12</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Residential Commission hierarchies (Level 12)</relationshipLabel>
    <relationshipName>Residential_Commission_hierarchiesEjSP</relationshipName>
    <type>Lookup</type>
</CustomField>