force-app/main/default/objects/Residential_Commission_Hierarchy__c/fields/Opener__c.field-meta.xml
<CustomField>
    <fullName>Opener__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opener</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Residential Commission hierarchies (Opener)</relationshipLabel>
    <relationshipName>Residential_Commission_hierarchiesEk3B</relationshipName>
    <type>Lookup</type>
</CustomField>