force-app/main/default/objects/Residential_Commission_Hierarchy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Closer__c</columns>
    <columns>Effective_From__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>